--- a/application.macosx/BalanduinoProcessingApp.app/Contents/Info.plist
+++ b/application.macosx/BalanduinoProcessingApp.app/Contents/Info.plist
@@ -41,6 +41,8 @@
       <key>MainClass</key>
       <string>BalanduinoProcessingApp</string>
 
+      <!-- We don't support Java 7 on OS X. 
+	   Using it will break lots of things. -->
       <key>JVMVersion</key>
       <string>1.6*</string>
 
